# comfyui-save-file-extended

./: .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md  install_mocks.py  setup_comfyui_mocks.py
.github/scripts/: detect_version_change.py  update_pyproject_version.py
.github/workflows/: publish_node.yml  validate.yml
src/comfyui_save_file_extended/: __init__.py  image_extended.py  load_audio_extended.py  load_image_extended.py  load_video_extended.py  nodes.py  save_audio_extended.py  save_image_extended.py  save_video_extended.py  utils.py
src/comfyui_save_file_extended/cloud/: __init__.py  _logging.py  azure_blob.py  b2.py  dropbox_client.py  ftp_client.py  gcs.py  gdrive.py  onedrive.py  s3.py  s3_compatible.py  supabase_storage.py  upload_thing.py
src/comfyui_save_file_extended/extended_nodes/: __init__.py  load_audio_extended.py  load_image_extended.py  load_video_extended.py  save_audio_extended.py  save_image_extended.py  save_video_extended.py  save_workflow_extended.py
src/comfyui_save_file_extended/nodes/: load_video_extended.py  save_audio_extended.py  save_image_extended.py  save_video_extended.py
src/web/js/: progress.js
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_comfyui_save_file_extended.py  test_save_audio_extended.py  test_save_image_extended.py  test_save_video_extended.py  test_utils.py
web/docs/: LoadAudioExtended.md  LoadImageExtended.md  LoadVideoExtended.md  SaveAudioExtended.md  SaveAudioMP3Extended.md  SaveAudioOpusExtended.md  SaveImageExtended.md  SaveVideoExtended.md  SaveWEBMExtended.md  SaveWorkflowExtended.md
web/js/: enhance-ui.js  index.js  progress.js  savefile-extended-status.js  toasts.js  ui_enhance.js
